--- a/custom_css.css
+++ b/custom_css.css
@@ -52,7 +52,6 @@ body {
   background-color: white;
 }
 
-
 h1 {
   font-family: 'dolce';
   text-align: center;
@@ -67,6 +66,10 @@ hr {
     margin-right: none;
     border-style: inset;
     border-width: 1px;
+}
+
+.center {
+  text-align: center;
 }
 
 /* FONT CLASSES */
