--- a/custom_css.css
+++ b/custom_css.css
@@ -4,7 +4,6 @@
     src: url('fonts/Dolce Vita Light.ttf');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -12,7 +11,6 @@
     src: url('fonts/BEBAS__.TTF');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -20,7 +18,6 @@
     src: url('fonts/DroidSerif-Regular.ttf');
     font-weight: normal;
     font-style: normal;
-
 }
 
 /* ID TAGS */
@@ -45,7 +42,7 @@
   background-color:transparent;
 }
 
-/* GENERAL CLASSES */
+/* GENERAL TAGS */
 
 body {
   color: black;
@@ -68,8 +65,12 @@ hr {
     border-width: 1px;
 }
 
+/* MY CLASSES */
+
 .center {
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* FONT CLASSES */
